---
layout: doc
title: Release Notes
description: Release notes for each version of FusionAuth
---

:sectnumlevels: 0

////
Hide stuff inside these lines
////

[role=release-note]

== Version 1.15.3
_Pending Release_

=== Fixed
* On systems running MySQL, the `1.15.0` migration fails on a `DELIMITER` command and causes the instance table to have a null `license_id`.  If you have previously connected your support contract Id with your instance and upgraded to a previous `1.15.x` version, you will need to reconnect your license Id in the Reactor tab.
** Resolves https://github.com/FusionAuth/fusionauth-issues/issues/482[GitHub Issue #482], thanks to https://github.com/nulian[@nulian] for reporting!
* Missing some validation on /oauth2/passwordless endpoint
** Resolves https://github.com/FusionAuth/fusionauth-issues/issues/450[GitHub Issue #450], thanks to https://github.com/GraafG[@GraafG] for reporting.
* CancelAction method in NETCore client returning field error
** Resolves https://github.com/FusionAuth/fusionauth-netcore-client/issues/11[GitHub Issue #11], thanks to https://github.com/minjup[@minjup] for reporting.
* OpenID Connect IdP client authentication method is configurable as either `client_secret_basic` or `client_secret_post`, and does not attempt both. See the https://openid.net/specs/openid-connect-core-1_0.html#ClientAuthentication[OIDC spec concerning Client Authentication] for more information.
** The default client authentication method will now be configured to `client_secret_basic`, and you will need to enable `client_secret_post` for your integration to remain compatible with an IdP supporting that method.  Discord is a known IdP that requires the `client_secret_post` client authentication method.