@@ -10,9 +10,7 @@
       "authorization_endpoint": "https://acme.com/oauth2/authorization",
       "client_id" : "191c23dc-b772-4558-bd21-dc1cbf74ae21",
       "client_secret" : "SUsnoP0pWUYfXvWbSe5pvj8Di5nAxOvO",
-      "clientAuthenticationMethod": {
-        "client_secret_post": false
-      },
+      "clientAuthenticationMethod": "client_secret_basic",
       "scope" : "openid offline_access",
       "token_endpoint" : "https://acme.com/oauth2/token",
       "userinfo_endpoint" : "https://acme.com/oauth2/userinfo"
