@@ -58,8 +58,14 @@ This is useful for debugging purposes, but is not intended to be left on during 
 |[field]#identityProvider.oauth2.client_secret# [type]#[String]# [optional]#Optional#
 |The top-level client secret to use with the OpenID Connect identity provider.
 
-|[field]#identityProvider.oauth2.clientAuthenticationMethod.client_secret_post# [type]#[Boolean]# [optional]#Optional# [default]#defaults to `false`# [since]#Available Since 1.15.3#
-|Whether to use `client_secret_post` as the client authentication method.  When `false`, `client_secret_basic` will be used as the client authentication method.
+Required when [field]#identityProvider.oauth2.clientAuthenticationMethod# is `client_secret_basic` or `client_secret_post`.
+
+|[field]#identityProvider.oauth2.clientAuthenticationMethod# [type]#[String]# [optional]#Optional# [since]#Available Since 1.15.3# [default]#defaults to `client_secret_basic`#
+|The client authentication method to use with the OpenID Connect identity provider.  Possible values are:
+
+* `client_secret_basic`
+* `client_secret_post`
+* `none`
 
 |[field]#identityProvider.oauth2.issuer# [type]#[String]# [optional]#Optional#
 |The top-level issuer URI for the OpenID Connect identity provider. If this is provided, the authorization endpoint, token endpoint and userinfo endpoint will all be resolved using the `issuer` URI plus `/.well-known/openid-configuration`.
