@@ -59,8 +59,12 @@
 |[field]#identityProvider.oauth2.client_secret# [type]#[String]#
 |The top-level client secret to use with the OpenID Connect identity provider.
 
-|[field]#identityProvider.oauth2.clientAuthenticationMethod.client_secret_post# [type]#[Boolean]# [since]#Available Since 1.15.3#
-|Determines if `client_secret_post` will be used as the client authentication method.  When `false`, `client_secret_basic` will be used as the client authentication method.
+|[field]#identityProvider.oauth2.clientAuthenticationMethod# [type]#[String]# [since]#Available Since 1.15.3#
+|The client authentication method to use with the OpenID Connect identity provider.  Possible values are:
+
+* `client_secret_basic`
+* `client_secret_post`
+* `none`
 
 |[field]#identityProvider.oauth2.issuer# [type]#[String]#
 |The top-level issuer URI for the OpenID Connect identity provider. If this is provided, the authorization endpoint, token endpoint and userinfo endpoint will all be resolved using the `issuer` URI plus `/.well-known/openid-configuration`.
