@@ -47,7 +47,11 @@ Note the `VALUE` of the created client secret.  This will be used as the [field]
 
 To create an Azure AD Identity Provider return to FusionAuth and navigate to [breadcrumb]#Settings# icon:chevron-right[role=breadcrumb,type=fas] [breadcrumb]#Identity Providers# and click `Add provider` and select `OpenID Connect` from the dialog.
 
-This will take you to the `Add OpenID Connect` panel, and you'll fill out the required fields.  [field]#Client Id# and [field]#Client secret# values reference the previously noted Azure AD Application's `Application (client) ID`, client secret `VALUE`. The [field]#Redirect URL# is read only and generated for you based upon the URL of FusionAuth, this value should match the one you configured in your Azure application.
+This will take you to the `Add OpenID Connect` panel, and you'll fill out the required fields.
+
+You will need to set [field]#Client authentication method# to `HTTP Basic authentication (client_secret_basic)`.
+
+[field]#Client Id# and [field]#Client secret# values reference the previously noted Azure AD Application's `Application (client) ID`, client secret `VALUE`. The [field]#Redirect URL# is read only and generated for you based upon the URL of FusionAuth, this value should match the one you configured in your Azure application.
 
 Azure AD has implemented a well-known configuration endpoint, FusionAuth will be able to discover the necessary endpoints when you provide the URL `\https://login.microsoftonline.com/{tenantId}` to the provider in the `Issuer` field, where `{tenantId}` is the `Directory (tenant) ID` previously noted while creating our Azure AD Application.
 
@@ -57,4 +61,7 @@ In the following screenshot you will see that we have enabled this login provide
 
 That's it, now the `Login with Azure AD` button will show up on the login page of our `Hooli` application.
 
+////
+TODO - Trevor - update screenshot
+////
 image::azure-openid-connect-configuration.png[FusionAuth Azure AD IdP Configuration,width=1200,role=shadowed]
