@@ -42,7 +42,7 @@ Discord has not implemented a well-known configuration endpoint, so you will nee
 
 You will need to specify the scopes `identify email` in the [field]#Scope# field for your application.
 
-You will need to enable the [field]#Authenticate with client_secret_post# field, as Discord expects the `client_secret` in the request body of the authentication request.
+You will need to set [field]#Client authentication method# to `Client credentials in the request body (client_secret_post)`, as Discord expects the `client_secret` in the request body of the authentication request.
 
 In the following screenshot you will see that we have enabled this login provider for the `SeeFood` application and enabled [field]#Create registration#.
 
@@ -50,4 +50,7 @@ Discord does not implement OpenID Connect to spec. In order to pull in some addi
 
 That's it, now the `Login with Discord` button will show up on the login page of our `SeeFood` application.
 
+////
+TODO - Trevor - update screenshot
+////
 image::discord-openid-connect-configuration.png[FusionAuth Discord IdP Configuration,width=1200,role=shadowed]
