@@ -35,7 +35,11 @@ Once the application has been created, note the `Client ID` and the `Client Secr
 
 To create a GitHub Identity Provider return to FusionAuth and navigate to [breadcrumb]#Settings# icon:chevron-right[role=breadcrumb,type=fas] [breadcrumb]#Identity Providers# and click `Add provider` and select `OpenID Connect` from the dialog.
 
-This will take you to the `Add OpenID Connect` panel, and you'll fill out the required fields.  [field]#Client Id# and [field]#Client secret# values reference the previously noted GitHub OAuth Application's `Client ID` and `Client Secret`. The [field]#Redirect URL# is read only and generated for you based upon the URL of FusionAuth, this value should match the one you configured in your GitHub application.
+This will take you to the `Add OpenID Connect` panel, and you'll fill out the required fields.
+
+You will need to set [field]#Client authentication method# to `HTTP Basic authentication (client_secret_basic)`.
+
+[field]#Client Id# and [field]#Client secret# values reference the previously noted GitHub OAuth Application's `Client ID` and `Client Secret`. The [field]#Redirect URL# is read only and generated for you based upon the URL of FusionAuth, this value should match the one you configured in your GitHub application.
 
 GitHub has not implemented a well-known configuration endpoint, so you will need to disable the [field]#Discover endpoints# field and specify the endpoints manually.  The values for these fields are:
 
@@ -51,4 +55,7 @@ GitHub does not implement OpenID Connect to spec. In order to pull in some addit
 
 That's it, now the `Login with GitHub` button will show up on the login page of our `Aviato` application.
 
+////
+TODO - Trevor - update screenshot
+////
 image::github-openid-connect-configuration.png[FusionAuth GitHub IdP Configuration,width=1200,role=shadowed]
