@@ -45,6 +45,9 @@ If you do not wish to automatically provision a user for this Application when l
 
 That's it, now the `Login with PiedPiper` button will show up on the login page.
 
+////
+TODO - Trevor - update screenshot
+////
 image::identity-provider-openid-connect-add.png[Add OpenID Connect,width=1200,role=shadowed]
 
 
@@ -61,13 +64,13 @@ image::identity-provider-openid-connect-add.png[Add OpenID Connect,width=1200,ro
 |Client Id [required]#Required#
 |The client Id that will be used during the authentication workflow with this provider. This value will have been provided to you by the owner of the identity provider.
 
-|Client secret [required]#Required#
-|The client secret that will be used during the authentication workflow with this provider. This value will have been provided to you by the owner of the identity provider.
-
-|Authenticate with client_secret_post [optional]#Optional# [since]#Available Since 1.15.3#
-|Enable to use `client_secret_post` as the client authentication method. When `false`, `client_secret_basic` will be used as the client authentication method.
+|Client authentication method [optional]#Optional# [since]#Available Since 1.15.3#
+|The client authentication method to use with the OpenID Connect identity provider.
 
 See the https://openid.net/specs/openid-connect-core-1_0.html#ClientAuthentication[OIDC spec concerning Client Authentication] for more information.
+
+|Client secret [optional]#Optional#
+|The client secret that will be used during the authentication workflow with this provider. This value will have been provided to you by the owner of the identity provider.  This value is required when [field]#Client authentication method# is not `HTTP basic authentication (client_secret_basic)` or `Request body (client_secret_post)`.
 
 |Redirect URL [read-only]#Read-only# [since]#Available Since 1.6.0#
 |This is the redirect URI you will need to provide to your identity provider.
